# geopolitical_simulation

./: .env.example  .gitignore  COMMANDS.md  README.md  chat_history.txt  go.mod  go.sum
api/: main.go
artifacts/: metrics.json
configs/: actor_financial_tier.json  cameo_country_to_iso3.json  landlocked_countries.json  nuclear_states.json  sanctions_registry.json  unsc_schedule.json
demos/: test.csv
infra/docker/: docker-compose.yml
ingestion/: pipeline.go
ingestion/aggregated/: aggregate.go  gdelt.go  schema.go
ingestion/raw/: acled.go  countries.go  events.go  featuresnapshot.go  gdelt.go  namemap.go  schema.go  seed.go  sipri.go  types.go  undp.go  vdem.go  wikidata.go  worldbank.go
internal/config/: config.go  dotenv.go
internal/label/: cameo.go
internal/neo4jdb/: client.go
internal/timestep/: timestep.go
plans/: 01-architecture.md  02-data-ingestion.md  03-ml-workflow.md  04-react-agent.md  05-frontend.md
services/agent/: .env.example  README.md  pyproject.toml
services/agent/agent/: __init__.py  __main__.py  config.py  counterfactual.py  explainer.py  graph.py  groups.py  llm.py  mcp_server.py  places.py  runtime.py  schemas.py  server.py  tools_core.py
services/agent/tests/: conftest.py  test_counterfactual.py  test_explainer.py  test_graph.py  test_mcp_server.py  test_places.py  test_server.py  test_tools_core.py
services/ml/: README.md  app.py  pyproject.toml
services/ml/export/: neo4j_to_parquet.py
services/ml/geopolitic_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/ml/ml/: __init__.py  calibrate.py  config.py  dataset.py  explain.py  features.py  infer.py  losses.py  metrics.py  model.py  timestep.py  train.py
services/ml/notebooks/: build_notebook.py  train_geopolitic_gnn.ipynb
services/ml/tests/: conftest.py  test_config.py  test_dataset.py  test_features.py  test_losses_metrics.py  test_model.py  test_timestep.py  test_train_smoke.py
tests/: events_test.go  integration_test.go  label_test.go  parsers_test.go  timestep_test.go
tools/: add_gdelt_country.go  gen_cameo.go  trim_datasets.go
(+38 files in other folders)
