[project]
name = "geopolitic-agent"
version = "1.0.0"
description = "ReAct agent + MCP tools over the trained geopolitic GNN (see plans/04-react-agent.md)"
requires-python = ">=3.10"
dependencies = [
    # the agent reuses the trained model in-process:
    "geopolitic-ml",
    # ReAct + MCP + LLM:
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-ollama>=0.2",
    "mcp>=1.2",
    # serving:
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
    # place resolution (ISO-3 names/aliases, no Neo4j required):
    "pycountry>=23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# optional alternative LLM providers (Ollama is the default; no key needed):
anthropic = ["langchain-anthropic>=0.2"]
openai = ["langchain-openai>=0.2"]

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # the shipped scaler was pickled with an older sklearn; harmless for inference.
    "ignore::UserWarning",
    # create_react_agent is deprecated in LangGraph v1 but still functional (no behavior change).
    "ignore:create_react_agent has been moved",
]
