[project]
name = "geopolitic-ml"
version = "1.0.0"
description = "Spatio-temporal GNN for country↔country link-label prediction (see plans/03-ml-workflow.md)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.3",
    "torchmetrics>=1.3",
    "captum>=0.7",
    "joblib>=1.3",
    "tqdm>=4.66",
    "wandb>=0.16",
    "neo4j>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["ml*", "export*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
